// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative pb/merchant.proto
syntax = "proto3";

package merchant;

option go_package = "github.com/thiagolcmelo/payment-gateway/merchant/pb";

service MerchantService {
    rpc GetMerchant(GetMerchantRequest) returns (GetMerchantResponse) {}
    rpc GetQPS(GetQPSRequest) returns (GetQPSResponse) {}
    rpc MerchantActive(MerchantActiveRequest) returns (MerchantActiveResponse) {}
    rpc FindMerchant(FindMerchantRequest) returns (FindMerchantResponse) {}
}

message GetMerchantRequest {
    string id = 1;
}

message GetMerchantResponse {
    string id = 1;
	string username = 2;
	string password = 3;
	bool active = 4;
	int32 max_qps = 5;
}

message GetQPSRequest {
    string id = 1;
}

message GetQPSResponse {
    int32 max_qps = 5;
}

message MerchantActiveRequest {
    string id = 1;
}

message MerchantActiveResponse {
    bool active = 1;
}

message FindMerchantRequest {
    string username = 1;
	string password = 2;
}

message FindMerchantResponse {
    bool exists = 1;
    optional string id = 2;
}