// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative pb/ratelimiter.proto
// go get -u google.golang.org/grpc
syntax = "proto3";

package ratelimiter;

option go_package = "github.com/thiagolcmelo/payment-gateway/ratelimiter/pb";

service RateLimiterService {
    rpc Allow(AllowRequest) returns (AllowResponse) {}
}

message AllowRequest {
    string id = 1;
}

message AllowResponse {
    bool allow = 1;
}